// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components rendering should render \`KeyboardAvoidingView\` 1`] = `
<View
  behavior="height"
  style={
    {
      "marginBottom": 20,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "black",
        "height": 20,
        "width": 20,
      }
    }
  />
</View>
`;

exports[`components rendering should render \`KeyboardAwareScrollView\` 1`] = `
<RCTScrollView
  bottomOffset={20}
  disableScrollOnKeyboardHide={false}
  enabled={true}
  style={
    {
      "marginBottom": 20,
    }
  }
>
  <View>
    <View
      style={
        {
          "backgroundColor": "black",
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`components rendering should render \`KeyboardControllerView\` 1`] = `
<KeyboardControllerView
  statusBarTranslucent={true}
/>
`;

exports[`components rendering should render \`KeyboardProvider\` 1`] = `
<KeyboardProvider
  statusBarTranslucent={true}
>
  <View
    style={
      {
        "backgroundColor": "black",
        "height": 20,
        "width": 20,
      }
    }
  />
</KeyboardProvider>
`;

exports[`components rendering should render \`KeyboardStickyView\` 1`] = `
<View
  offset={
    {
      "closed": -20,
      "opened": -40,
    }
  }
  style={
    {
      "marginBottom": 20,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "black",
        "height": 20,
        "width": 20,
      }
    }
  />
</View>
`;

exports[`components rendering should render \`KeyboardToolbar\` 1`] = `
<View
  content={<EmptyView />}
/>
`;

exports[`components rendering should render \`OverKeyboardView\` 1`] = `
<OverKeyboardView
  visible={true}
>
  <View
    style={
      {
        "backgroundColor": "black",
        "height": 20,
        "width": 20,
      }
    }
  />
</OverKeyboardView>
`;
